
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int recv_buf ;


 int memcpy (char*,char*,int) ;
 int printf (char*,char*) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int,int ) ;
 char* strtok (char*,char*) ;

int check_version(int sock) {
        char *version;
        char buf_ver[256];
        char recv_buf[256];
        int ret;

        memcpy(buf_ver,"l\n",2);
        ret = send (sock, buf_ver, 2, 0);
        ret = recv(sock,recv_buf,sizeof(recv_buf),0);
        version = strtok(recv_buf," ");
        version = strtok(((void*)0)," ");
        printf("GPSD VERSION: %s\n",version);

}
